--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <a href= "https://github.com/cldkelly/Resume/blob/main/Kelly%20Resume%202023.pdf"/>Click Here for Christopher Kelly Resume</a></p>
+  <p><a href= "https://github.com/cldkelly/Resume/blob/main/Kelly%20Resume%202023.pdf"/>Click Here for Christopher Kelly Resume</a></p>
 </html>
